Update Java to 17 along with libraries