@@ -9,14 +9,14 @@
     <description>List Loader</description>
 
     <properties>
-        <java.version>14</java.version>
-        <blocklist-tools.version>1.0.4</blocklist-tools.version>
-        <slf4j.version>1.7.32</slf4j.version>
-        <jackson.version>2.13.0</jackson.version>
+        <java.version>17</java.version>
+        <blocklist-tools.version>1.1.1</blocklist-tools.version>
+        <slf4j.version>1.7.36</slf4j.version>
+        <jackson.version>2.13.2</jackson.version>
         <junit.version>5.8.2</junit.version>
-        <assertj.version>3.21.0</assertj.version>
-        <errorprone.version>2.10.0</errorprone.version>
-        <logback.version>1.2.8</logback.version>
+        <assertj.version>3.22.0</assertj.version>
+        <errorprone.version>2.11.0</errorprone.version>
+        <logback.version>1.2.11</logback.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -91,7 +91,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
+                    <version>3.10.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -106,11 +106,11 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
-                    <version>3.1.2</version>
+                    <version>3.2.2</version>
                 </plugin><plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <version>3.2.4</version>
+                    <version>3.3.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -157,17 +157,25 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <optimize>true</optimize>
                     <debug>true</debug>
+                    <verbose>true</verbose>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
-                    <fork>true</fork>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                     <debuglevel>lines,vars,source</debuglevel>
+                    <fork>true</fork>
                     <compilerArgs>
                         <arg>-XDcompilePolicy=simple</arg>
                         <arg>-Xplugin:ErrorProne</arg>
-                        <arg>-Xlint:unchecked</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                     </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
